--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="suporte">
                 <p>Para esclarecer dúvidas entre em contato com nosso suporte</p>
 
-                <button><a href="https://web.whatsapp.com/">Clique aqui</a></button>
+                <button><a href="https://web.whatsapp.com/">Clique</a></button>
                 <br>
                 <br>
             
