--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div> 
         <footer class="container">
             <div id="suporte">
-                <p>Para esclarecer dúvidas entre em contato com nosso suporte</p>
+                <p>Para esclarecer dúvidas entre em contato conosco</p>
 
-                <button><a href="https://web.whatsapp.com/">Clique</a></button>
+                <button><a href="https://www.instagram.com/infoobeauty/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==">Clique</a></button>
                 <br>
                 <br>
             
