--- a/limpeza.html
+++ b/limpeza.html
@@ -30,10 +30,14 @@
            A limpeza é simples de se fazer, primeiro vamos utilizar o lenço umedecido e depois com o auxílio de um algodão a água micelar
            <br>
            Lave as mãos: Sempre comece lavando bem as mãos para garantir que você está tocando seu rosto com as mãos limpas.
+           <br>
+           <img src="img/olhos.png" alt="">
+            <br>
             <br>
            Lenços umedecidos: Use um lenço umedecido de boa qualidade. Os lenços umedecidos são práticos para remover maquiagem e sujeira, mas escolha aqueles que são suaves e adequados ao seu tipo de pele.
            <br>
            Remova a maquiagem: Passe o lenço umedecido suavemente sobre o rosto para remover a maquiagem. Certifique-se de não esfregar muito, especialmente na área dos olhos, para evitar irritações.
+           <br>
            <br>
              Água micelar: Em seguida, aplique a água micelar em um algodão ou almofada de algodão. Passe suavemente sobre o rosto para remover qualquer resíduo de maquiagem, sujeira ou óleo que possa ter ficado para trás. A água micelar ajuda a limpar e tonificar a pele.
                 <br>
