--- a/olhos.html
+++ b/olhos.html
@@ -74,8 +74,8 @@
         
             Se tiver dificuldade com um delineador líquido, experimente um gel ou um lápis para começar.
             Uma mão firme é fundamental, então apoie o cotovelo em uma superfície estável para mais precisão.
-            Praticar é a chave! Não se preocupe se não ficar perfeito na primeira tentativa. Com a prática, você vai melhorar.
-            Lembre-se, não existe um jeito certo ou errado de fazer um delineado - é tudo sobre o que funciona para você e te faz se sentir confiante.
+            Praticar é a chave! Não se preocupe se não ficar perfeito na primeira tentativa.<br> Com a prática, você vai melhorar.
+            Lembre-se, não existe um jeito certo ou errado de fazer um delineado  é tudo sobre o que funciona para você e te faz se sentir confiante.
         </p>
 </body>
 </html>
