--- a/pele.html
+++ b/pele.html
@@ -24,28 +24,39 @@
 
     <p>
         Passo 1: Prepare a Pele
-        Antes de aplicar o corretivo, é importante começar com a pele limpa e hidratada. Certifique-se de ter lavado o rosto e aplicado seu hidratante facial regular. Deixe o hidratante ser absorvido pela pele antes de prosseguir.
+        Antes de aplicar o corretivo, é importante começar com a pele limpa e hidratada. Certifique-se de ter lavado o rosto e aplicado seu hidratante facial regular. Deixe o hidratante ser absorvido pela pele antes de prosseguir.<br>
+        <img src="img/img1.png" alt="" class="img">
         <br>
         Passo 2: Escolha a Cor Certa
-        Escolha um corretivo que seja da mesma tonalidade da sua base ou um tom ligeiramente mais claro. Isso ajudará a corrigir as imperfeições sem destacar a área.
+        Escolha um corretivo que seja da mesma tonalidade da sua base ou um tom ligeiramente mais claro. Isso ajudará a corrigir as imperfeições sem destacar a área.<br>
+        <img src="img/img2.png" alt="" class="img">
         <br>
-        Passo 3: Identifique as Áreas a Serem Corrigidas
-        Olhe atentamente para o seu rosto e identifique as áreas que precisam de correção. Isso pode incluir manchas, olheiras, espinhas ou qualquer outra imperfeição.
+        Passo 3: 
+        Olhe atentamente para o seu rosto e identifique as áreas que precisam de correção. Isso pode incluir manchas, olheiras, espinhas ou qualquer outra imperfeição.<br>
+       
         <br>
         Passo 4: Aplique o Corretivo
-        Use um pincel de corretivo ou seus dedos para aplicar o corretivo nas áreas que você identificou. Aplique o produto em pequenos pontos ou traços, em vez de grandes quantidades, para garantir uma aplicação uniforme.
+        Use um pincel de corretivo ou seus dedos para aplicar o corretivo nas áreas que você identificou. Aplique o produto em pequenos pontos ou traços, em vez de grandes quantidades, para garantir uma aplicação uniforme.<br>
+        <img src="img/img3.png" alt="" class="img">
         <br>
         Passo 5: Dê Batidinhas para Espalhar
-        Com a ponta dos dedos ou um pincel macio, dê batidinhas suaves na área onde aplicou o corretivo. Isso ajuda a misturar o produto à sua pele de forma natural. Evite esfregar para não irritar a pele.
+        Com a ponta dos dedos ou um pincel macio, dê batidinhas suaves na área onde aplicou o corretivo. Isso ajuda a misturar o produto à sua pele de forma natural. Evite esfregar para não irritar a pele.<br>
+        <img src="img/img5.png" alt="" class="img">
+
         <br>
         Passo 6: Ajuste a Quantidade
-        Adicione mais corretivo, se necessário, mas evite aplicar uma quantidade excessiva. É mais fácil adicionar mais produto do que corrigir um excesso.
+        Adicione mais corretivo, se necessário, mas evite aplicar uma quantidade excessiva.
+        <br>
+       
         <br>
         Passo 7: Defina com Pó Translúcido
-        Para evitar que o corretivo acumule em linhas finas e rugas, defina a área com um pouco de pó translúcido. Isso ajudará a manter o corretivo no lugar ao longo do dia.
+        Para evitar que o corretivo acumule em linhas finas e rugas, defina a área com um pouco de pó translúcido. Isso ajudará a manter o corretivo no lugar ao longo do dia.<br>
+        <img src="img/img4.png" alt="" class="img">
         <br>
         Passo 8: Termine a Maquiagem
         Continue com sua rotina de maquiagem regular. Se você usar base, aplique-a após o corretivo para obter um visual uniforme.
+        <br>
+        <img src="img/img7.png" alt="" class="img">
         <br>
         Lembre-se, a chave para uma aplicação de corretivo eficaz é a moderação. Comece com uma pequena quantidade de produto e vá construindo conforme necessário. Isso garantirá uma correção natural e suave.</p>
 
