--- a/olhos.html
+++ b/olhos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/icone.png" type="image/x-icon">
     <title>Olhos</title>
     <link rel="stylesheet" href="olhos.css">
 </head>
@@ -77,5 +78,11 @@
             Praticar é a chave! Não se preocupe se não ficar perfeito na primeira tentativa.<br> Com a prática, você vai melhorar.
             Lembre-se, não existe um jeito certo ou errado de fazer um delineado  é tudo sobre o que funciona para você e te faz se sentir confiante.
         </p>
+
+        <footer >
+       
+            InfoBeauty@gmail.com
+            
+       </footer> 
 </body>
 </html>
