--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="suporte">
                 <p>Para esclarecer dúvidas entre em contato conosco</p>
             
-                <p><a href="info.html">Quem somos?</a> | InfoBeauty@gmail.com</p>
+                <p><a href="info.html">Quem somos?</a> | InfoBeauty@gmail.com</p> <a href="https://www.instagram.com/infoobeauty/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw%3D%3D"><img src="img/insta.png"  id="insta"></a>
                 
             </div>
 
