--- a/info.html
+++ b/info.html
@@ -60,7 +60,7 @@
     
 
         p{
-            text-align: justify;
+            text-align: left;
             column-count: 1;
             padding: 0px 0px;
     
