--- a/info.html
+++ b/info.html
@@ -63,6 +63,7 @@
             text-align: left;
             column-count: 1;
             padding: 0px 0px;
+            margin: 20px 10px 10px 30px;
     
       
         }
