--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 
 
-        <div>
-            <p id="maquiagem" > 
+        <div id="maquiagem">
+            <p id="make"> 
                     A maquiagem desempenha um papel fundamental na autoestima das mulheres, oferecendo uma ferramenta poderosa para realçar sua beleza natural e expressar sua individualidade. Embora a beleza interior seja inegavelmente mais importante, a maquiagem pode ser uma aliada valiosa na construção da confiança e autoestima de uma mulher.
                     Primeiramente, a maquiagem permite que as mulheres se sintam mais confiantes ao cobrir imperfeições temporárias, como espinhas, olheiras ou manchas na pele. Isso pode fazer com que se sintam mais à vontade em suas interações sociais e no ambiente de trabalho, o que, por sua vez, contribui para uma autoestima mais elevada.
                     Além disso, a maquiagem pode ser uma forma de expressão pessoal.<br> Ela permite que as mulheres experimentem diferentes looks, cores e estilos, refletindo sua personalidade e humor. A capacidade de transformar a aparência com um simples toque de pincel ou batom oferece um senso de controle sobre sua imagem, o que é empoderador.
